style: add emoticon on chapter 1 link

--- a/src/notebooks/Capitulo 1 - Modelos de Transformers.ipynb
+++ b/src/notebooks/Capitulo 1 - Modelos de Transformers.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Capitulo 1 - Modelos de Transformers\n",
     "\n",
-    "*Esse notebook contém anotações e traduções de algumas seções do seguinte capítulo* [LLM Course - Chapter 1 - Transfomer Models](https://huggingface.co/learn/llm-course/chapter1/) "
+    "*Esse notebook contém anotações e traduções de algumas seções do seguinte capítulo* [🤗 LLM Course - Chapter 1 - Transfomer Models](https://huggingface.co/learn/llm-course/chapter1/) "
    ]
   },
   {
