docs: reorganize notebook sections

--- a/src/notebooks/Capitulo 1 - Modelos de Transformers.ipynb
+++ b/src/notebooks/Capitulo 1 - Modelos de Transformers.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f45ccf13",
    "metadata": {},
    "outputs": [
@@ -38,8 +38,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rapha/.cache/pypoetry/virtualenvs/huggingface-llm-course-zI0DbtNH-py3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision 714eb0f (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
       "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
       "Device set to use cpu\n"
@@ -51,7 +49,7 @@
        "[{'label': 'POSITIVE', 'score': 0.9598049521446228}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "6653aee0",
    "metadata": {},
    "outputs": [
@@ -84,7 +82,7 @@
        " {'label': 'NEGATIVE', 'score': 0.9994558691978455}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +115,7 @@
    "id": "2d8d6ac4",
    "metadata": {},
    "source": [
-    "## Pipelines disponíveis para diferentes modalidades\n",
+    "### Pipelines disponíveis para diferentes modalidades\n",
     "\n",
     "A função `pipeline()` dar suporte a outras modalidades além de texto, bem como imagem, áudio e combinações delas (*multimodal*).\n",
     "\n",
@@ -154,12 +152,12 @@
    "id": "0baf7a47",
    "metadata": {},
    "source": [
-    "## Classificação Zero-shot"
+    "### Classificação Zero-shot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "71024bf6",
    "metadata": {},
    "outputs": [
@@ -180,7 +178,7 @@
        " 'scores': [0.8445994257926941, 0.11197380721569061, 0.04342673346400261]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,12 +196,12 @@
    "id": "63fd0fd7",
    "metadata": {},
    "source": [
-    "## Geração de texto"
+    "### Geração de texto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "0423e026",
    "metadata": {},
    "outputs": [
@@ -220,10 +218,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': \"In this course, we will teach you how to use the SQL API to write Java applications. In the next course, we will use the SQL API to write Java applications with the MySQL database.\\n\\nRequirements\\n\\nPython 2.7 or higher\\n\\nPHP 5\\n\\nPHP 5.1 or above\\n\\nHaxe 3.7 or higher\\n\\nJava\\n\\nInstallation\\n\\nRun the following command:\\n\\napt-get install mysql-sql-library\\n\\nThe following command will install MySQL 5.1.2.2 or later.\\n\\n$ sudo apt-get install mysql-sql-library\\n\\nAlternatively, install the following Perl 1.7 package:\\n\\n# Install the Perl version from the official Perl distribution of Perl, including: perl6.7_release\\n\\nThis package is automatically installed if you already have Perl 5 or newer.\\n\\nExample\\n\\n$ sudo apt-get install mysql-sql-library \\\\ --install perl6.7_release\\n\\nSample\\n\\n$ mysql-sql-library /path/to/mysql/\\n\\nExample\\n\\n$ mysql -u 'SELECT * FROM tables WHERE name='name' LIMIT 1'; 'SELECT * FROM tables WHERE name='name' FROM 'NULL' LIMIT 1'; '\"}]"
+       "[{'generated_text': \"In this course, we will teach you how to install and use a Raspberry Pi to build your own projects. We will also show you how to use a Raspberry Pi to create your own web apps.\\n\\nWe're going to install a Raspberry Pi to run these tutorials, but for now, we want to explain a few things. The first thing that you will need to do is to install the following dependencies.\\n\\nRaspbian - Required\\n\\nsudo apt-get install libgcc-dev libreoffice-dev\\n\\nsudo apt-get install libelf-dev libboost-0.4-dev\\n\\nsudo apt-get install libboost-0.7-dev\\n\\nsudo apt-get install libssl-dev libgmp-dev libevent-dev\\n\\nYou'll need a file called libpcap.so. It's located here.\\n\\nWe'll also install a few packages from the official repository.\\n\\nInstall\\n\\npkg install pcap\\n\\nsudo apt-get install pcap-dev libmp4-dev libgmp2-dev\\n\\nsudo apt-get install libgmp2-dev libgcrypt-dev libssl-dev\\n\\nInstall\\n\\npkg install pcap-dev libcurl3-dev\"}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,12 +236,12 @@
    "id": "68d83ce0",
    "metadata": {},
    "source": [
-    "## Usando qualquer modelo do Hub em um pipeline"
+    "### Usando qualquer modelo do Hub em um pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "6d694d0b",
    "metadata": {},
    "outputs": [
@@ -260,11 +258,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': 'In this course, we will teach you how to use these tools to understand your emotions better and improve your relationships. You will get to know your emotions better and start to notice when you are experiencing them, what they are telling you, and how you can respond to them. We will also teach you how to manage your emotions when you are struggling, and how to build a healthy relationship with yourself and others.\\n\\nThe course will be based on practical advice and techniques, and will focus on real-life situations. You will learn to identify and understand your emotions, and how to handle them in a healthy way. You will also learn to develop a healthy relationship with yourself and others.\\n\\nWe will teach you how to use the techniques and skills you learn to improve your emotional intelligence and manage your emotions more effectively. You will learn how to identify and understand your emotions, how to manage them, and how to build a healthy relationship with yourself and others.\\n\\nYou will learn how to identify and understand your emotions and how to manage them more effectively. You will also learn how to build a healthy relationship with yourself and others.\\n\\nThis course is designed to help you understand your emotions better and improve your emotional intelligence. It will teach you how to identify and understand your emotions, how to manage them in a healthy'},\n",
-       " {'generated_text': \"In this course, we will teach you how to use VB.NET to create some truly interactive online games. We'll start with a basic introduction to VB.NET, and then work our way through each of the core concepts of VB.NET we'll be covering. We'll begin by creating a simple game that teaches you how to use VB.NET to create a simple game.\\n\\nWhat you'll learn\\n\\nYou'll learn:\\n\\n• How to use VB.NET to create a simple game\\n• How to use the console to create a simple game\\n• How to create a simple game with multiple levels\\n• How to use variables to store data in a game\\n\\nYour email address will not be published.\"}]"
+       "[{'generated_text': \"In this course, we will teach you how to make a better quality home theater system. We will cover not only the basics that you need to know to build a good system, but also some of the finer points that can make a difference.\\n\\nWith some common sense, you should be able to take a few minutes out of your day to build a system that will work for you. If you don't have the time to learn on your own, you can always hire a professional to do it for you.\\n\\nWhat You Will Learn\\n\\nWe will cover everything you need to know to build a good home theater system. We will cover everything from building the components to the installation.\\n\\nWhat You Will Get\\n\\nThis course will teach you how to build a home theater system. We will give you step-by-step instructions on how to build a home theater system. We will teach you how to choose the right components for your system. We will explain how to select the right speakers and speakers for your system.\\n\\nWe will teach you how to select the right amplifiers and speakers. We will tell you how to select the right speakers for your system.\\n\\nWe will teach you how to select the right speakers for your system. We will explain how to select the right speakers for your system\"},\n",
+       " {'generated_text': \"In this course, we will teach you how to become a master of the modern dance form. We will study several different techniques and styles, including ballet, modern, and jazz dance. Our goal is to help you develop your own unique style and express yourself through dance.\\n\\nIn addition to learning various techniques, we will also focus on developing your physical and mental health as a dancer. You will learn how to take care of your body by eating healthy foods, getting enough exercise, and practicing relaxation techniques. We will also teach you how to manage stress and anxiety, so you can perform at your best under pressure.\\n\\nThroughout the course, we will use a variety of teaching methods, including video demonstrations, group discussions, and one-on-one instruction. We will also incorporate elements of modern dance, such as movement, improvisation, and collaboration, to help you develop a unique and personal style.\\n\\nBy the end of this course, you will have gained a strong foundation in modern dance techniques and styles, as well as the tools and techniques to take your own dance journey to the next level. So let's get started!\"}]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,12 +281,12 @@
    "id": "ae204b5d",
    "metadata": {},
    "source": [
-    "## Preenchimento de máscara"
+    "### Preenchimento de máscara"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "3abae939",
    "metadata": {},
    "outputs": [
@@ -317,7 +315,7 @@
        "  'sequence': 'This course will teach you all about computational models.'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,12 +330,12 @@
    "id": "ad734ea4",
    "metadata": {},
    "source": [
-    "## Reconhecimento de entidades nomeada"
+    "### Reconhecimento de entidades nomeada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "b022a9a4",
    "metadata": {},
    "outputs": [
@@ -375,7 +373,7 @@
        "  'end': 57}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,12 +388,12 @@
    "id": "0a872538",
    "metadata": {},
    "source": [
-    "## Respostas a Perguntas"
+    "### Respostas a Perguntas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "74025c16",
    "metadata": {},
    "outputs": [
@@ -414,7 +412,7 @@
        "{'score': 0.6949766278266907, 'start': 33, 'end': 45, 'answer': 'Hugging Face'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,12 +430,12 @@
    "id": "6a0b5cf4",
    "metadata": {},
    "source": [
-    "## Resumo de texto"
+    "### Resumo de texto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "57f64085",
    "metadata": {},
    "outputs": [
@@ -456,7 +454,7 @@
        "[{'summary_text': ' America has changed dramatically during recent years . The number of engineering graduates in the U.S. has declined in traditional engineering disciplines such as mechanical, civil,    electrical, chemical, and aeronautical engineering . Rapidly developing economies such as China and India continue to encourage and advance the teaching of engineering .'}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,12 +490,12 @@
    "id": "7b09764d",
    "metadata": {},
    "source": [
-    "## Tradução"
+    "### Tradução"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "f26b72a7",
    "metadata": {},
    "outputs": [
@@ -516,7 +514,7 @@
        "[{'translation_text': 'This course is produced by Hugging Face.'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +529,7 @@
    "id": "d69b9918",
    "metadata": {},
    "source": [
-    "## Pipelines de imagem e áudio"
+    "### Pipelines de imagem e áudio"
    ]
   },
   {
@@ -539,12 +537,12 @@
    "id": "8e4a238f",
    "metadata": {},
    "source": [
-    "### Classificação de imagem"
+    "#### Classificação de imagem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "802fbd03",
    "metadata": {},
    "outputs": [
@@ -578,12 +576,12 @@
    "id": "c5eb1e69",
    "metadata": {},
    "source": [
-    "### Reconhecimento Automático de Fala"
+    "#### Reconhecimento Automático de Fala"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "26105009",
    "metadata": {},
    "outputs": [
@@ -591,10 +589,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Device set to use cpu\n",
-      "`return_token_timestamps` is deprecated for WhisperFeatureExtractor and will be removed in Transformers v5. Use `return_attention_mask` instead, as the number of frames can be inferred from it.\n",
-      "Using custom `forced_decoder_ids` from the (generation) config. This is deprecated in favor of the `task` and `language` flags/config options.\n",
-      "Transcription using a multilingual Whisper will default to language detection followed by transcription instead of translation to English. This might be a breaking change for your use case. If you want to instead always translate your audio to English, make sure to pass `language='en'`. See https://github.com/huggingface/transformers/pull/28687 for more details.\n"
+      "Device set to use cpu\n"
      ]
     },
     {
@@ -620,7 +615,7 @@
    "id": "00e5bd1d",
    "metadata": {},
    "source": [
-    "## Combinando dados de múltiplas fontes\n",
+    "### Combinando dados de múltiplas fontes\n",
     "\n",
     "Uma aplicação robusta com Transformer é poder combinar e processar dados de fontes diferentes. Isso é especialmente útil quando você precisa:\n",
     "\n",
